# sigsegv-server

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.c
src/application/: game_server.c  game_server.h
src/infrastructure/: list.c  list.h  log.c  server.c  server.h
test/: test_list.cpp
